<resources>
    <string name="app_name">HEMSAPP</string>
    <string name="tv_login">Wellcome to HEMS App</string>
    <string name="tv_need_account">Create a new account.</string>
    <string name="btn_login">Login</string>
    <string name="user_name">User Name</string>
    <string name="user_email">Email</string>
    <string name="user_password">Password</string>
    <string name="btn_submit">Submit</string>
    <string name="account_already_exist">I have an account.</string>
    <string name="title_logout">Log Out</string>
    <string name="logout">Log Out</string>
    <string name="et_email">E-mail</string>
    <string name="et_password">Password</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="rs_name">Name</string>
    <string name="rs_surname">Surname</string>
    <string name="rs_birthDay">Birth Day</string>
    <string name="rs_gender">Gender</string>
    <string name="rs_male">Male</string>
    <string name="rs_female">Female</string>
    <string name="rs_user_name">Name</string>
    <string name="rs_status">Status</string>
    <string name="change_image">Change Image</string>
    <string name="btnSettings">Account Settings</string>
    <string name="btnAllUsers">All Users</string>
    <string name="rs_user_single_name" />
    <string name="rs_user_single_status">USer Status</string>
    <string name="rs_profile_user_name">User Name</string>
    <string name="rs_welcome">Welcome to chat page</string>
    <string name="user_password2">Please Enter Your Password Again.</string>
    <string name="rs_write_message">Enter message..</string>
    <string name="rs_online">Online</string>
    <string name="btnAddTask">Add New Task</string>
    <string name="rs_task_single_name">Task Name</string>
    <string name="rs_task_single_who">Who</string>
    <string name="rs_task_name">Task Name</string>
    <string name="rs_task_description">Description</string>
    <string name="rs_task_type">Type</string>
    <string name="rs_task_location">Location</string>
    <string name="rs_task_priority_urgent">Urgent</string>
    <string name="rs_task_priority_important">Important</string>
    <string name="rs_task_priority_standart">Standard</string>
    <string name="rs_new_task">New Task</string>
    <string name="change_assigned_employee">Change Assigned Employee</string>
    <string name="add_task">ADD TASK</string>
    <string name="rs_profile_image_desc">profile image</string>
    <string name="date">Date</string>
    <string name="rs_app_icon" >app icon</string>
    <string name="textview">TextView</string>
    <string name="chat_last_seen">last seen</string>
    <string name="rs_task_status">task status</string>
    <string name="rs_online_icon">online icon</string>
    <string name="message_text">Message Text</string>
    <string name="display_name">Display Name</string>
    <string name="_00_00">00:00</string>
    <string name="rs_message_single_image">single image</string>

    <string name="task_prompt">Choose a task type</string>
    <string-array name="task_types">
        <item>Room</item>
        <item>Garden</item>
        <item>Kitchen</item>
    </string-array>

    <string name="task_subtype_prompt">Choose a subtype</string>
    <string-array name="task_subtypes">
        <item>Service</item>
        <item>Cleaning</item>
    </string-array>
</resources>
