<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    tools:context=".ProfileActivity">

    <ImageView
        android:id="@+id/ivProfileImage"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/rs_profile_image_desc"
        android:scaleType="centerCrop"
        tools:srcCompat="@mipmap/profile" />

    <TextView
        android:id="@+id/tvProfileName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/rs_profile_user_name"
        android:textColor="@android:color/white"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tvProfileStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        tools:text="@string/rs_status" />
</LinearLayout>