<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:gravity="center"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/ivTaskSingleImage"
            android:layout_width="64dip"
            android:layout_height="64dip"
            android:padding="10dip" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvTaskSingleName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dip"
                    android:paddingTop="5dip"
                    android:paddingRight="5dip"
                    android:text="@string/rs_task_single_name"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    tools:text="Task Name" />

                <ImageView
                    android:id="@+id/ivTaskStatusIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="7dip"
                    android:contentDescription="@string/rs_task_status"
                    android:visibility="invisible"
                    app:srcCompat="@android:drawable/presence_online" />
            </LinearLayout>

            <TextView
                android:id="@+id/tvSingleWho"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:paddingLeft="5dip"
                android:paddingRight="5dip"
                android:text="@string/rs_task_single_who"
                android:textColor="@android:color/black"
                android:textSize="14sp" />

        </LinearLayout>

    </LinearLayout>

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gri" />

</LinearLayout>